--- a/.github/workflows/llvmdev_build.yml
+++ b/.github/workflows/llvmdev_build.yml
@@ -9,22 +9,32 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Build LLVMDEV
+
+      - name: Install Miniconda
         run: |
-          mkdir -p /home/runner/work/llvmlite/llvmlite/docker_output
-          chmod 777 /home/runner/work/llvmlite/llvmlite/docker_output
-          cd buildscripts/manylinux
-          ./docker_run_x64.sh build_llvmdev.sh "${MINICONDA_FILE}"
-          RECIPE_NAME=./conda-recipes/llvmdev_manylinux
+          wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+          bash miniconda.sh -b -p $HOME/miniconda
+          echo "$HOME/miniconda/bin" >> $GITHUB_PATH
+
+      - name: Setup Conda Environment
+        run: |
+          source $HOME/miniconda/bin/activate
+          conda create -n builder conda-build -y
+
+      - name: Build
+        run: |
+          source $HOME/miniconda/bin/activate
+          conda activate builder
+          RECIPE_NAME=./conda-recipes/llvmdev
+          conda build $RECIPE_NAME
           echo "OUTPUT=$(conda build --output $RECIPE_NAME)" >> $GITHUB_ENV
 
       - name: Upload LLVMDEV artifacts
         uses: actions/upload-artifact@v4
         with:
           name: llvmdev-linux-x86_64
-          path: /home/runner/work/llvmlite/llvmlite/docker_output/linux-64/*.tar.bz2
-          retention-days: 1
+          path: ${{ env.OUTPUT }}
+          retention-days: 7
           if-no-files-found: error 
 
   win-64:
@@ -41,25 +51,26 @@ jobs:
           Start-Process "Miniconda3-latest-Windows-x86_64.exe" "/S /D=C:\Miniconda3" -Wait
 
       - name: Setup Conda Environment
-        shell: bash
+        shell: cmd
         run: |
-          source /c/Miniconda3/Scripts/activate
+          call C:\Miniconda3\Scripts\activate.bat
           conda create -n builder conda-build -y
 
       - name: Build
-        shell: bash
+        shell: cmd
         run: |
-          source /c/Miniconda3/Scripts/activate
+          call C:\Miniconda3\Scripts\activate.bat
           conda activate builder
-          RECIPE_NAME=./conda-recipes/llvmdev_manylinux
-          conda build $RECIPE_NAME
-          echo "OUTPUT=$(conda build --output $RECIPE_NAME)" >> $GITHUB_ENV
+          set "RECIPE_NAME=.\conda-recipes\llvmdev"
+          conda build %RECIPE_NAME%
+          for /f "tokens=* USEBACKQ" %%F in (`conda build --output %RECIPE_NAME%`) do set OUTPUT=%%F
+          echo OUTPUT=%OUTPUT% >> %GITHUB_ENV%
 
       - name: Upload LLVMDEV artifacts
         uses: actions/upload-artifact@v4
         with:
           name: llvmdev-windows-x86_64
           path: ${{ env.OUTPUT }}
-          retention-days: 1
+          retention-days: 7
           if-no-files-found: error
 
