--- a/.github/workflows/llvmdev_manylinux_build.yml
+++ b/.github/workflows/llvmdev_manylinux_build.yml
@@ -1,4 +1,4 @@
-name: llvmdev-build
+name: llvmdev-manylinux-build
 
 on:
   workflow_dispatch:
@@ -10,17 +10,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Build LLVMDEV
+      - name: Build LLVMDEV Manylinux
         run: |
           mkdir -p /home/runner/work/llvmlite/llvmlite/docker_output
           chmod 777 /home/runner/work/llvmlite/llvmlite/docker_output
           cd buildscripts/manylinux
           ./docker_run_x64.sh build_llvmdev.sh "${MINICONDA_FILE}"
 
-      - name: Upload LLVMDEV artifacts
+      - name: Upload LLVMDEV Manylinux artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: llvmdev-linux-x86_64
+          name: llvmdev-manylinux-linux-x86_64
           path: /home/runner/work/llvmlite/llvmlite/docker_output/linux-64/*.tar.bz2
           retention-days: 7
           if-no-files-found: error 
