update workflow chaining - llvmlite

--- a/.github/workflows/llvmlite_build.yml
+++ b/.github/workflows/llvmlite_build.yml
@@ -2,6 +2,11 @@ name: llvmlite-build
 
 on:
   workflow_dispatch:
+    inputs:
+      llvmdev_run_id:
+        description: 'LLVMDEV workflow run ID to use artifacts from'
+        required: true
+        type: string
 
 jobs:
   linux-build:
@@ -15,6 +20,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      # Download llvmdev artifact from specific workflow run
+      - name: Download LLVMDEV Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: llvmdev-linux-x86_64
+          path: llvmdev-pkg
+          run-id: ${{ inputs.llvmdev_run_id }}
+          
       - name: Install Miniconda
         run: |
           bash buildscripts/incremental/install_miniconda.sh
@@ -34,7 +47,8 @@ jobs:
             wheel \
             -y
           conda activate build_env
-          conda install -y numba/label/ci::llvmdev --no-deps
+          # Install local llvmdev package instead of from numba channel
+          conda install -y ./llvmdev-pkg/*.tar.bz2
 
       - name: build_linux_64_py${{ matrix.python-version }}_npy1.11
         run: |
@@ -80,6 +94,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - name: Download LLVMDEV Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: llvmdev-windows-x86_64
+          path: llvmdev-pkg
+
       - name: Install Visual Studio
         uses: microsoft/setup-msbuild@v1.1
         
@@ -102,8 +122,8 @@ jobs:
             libxml2 \
             -y
           conda activate build_env
-          # Install LLVM with all dependencies
-          conda install -y -c numba/label/ci llvmdev
+          # Install local llvmdev package
+          conda install -y ./llvmdev-pkg/*.tar.bz2
 
       - name: Set Environment Variables
         shell: bash
@@ -157,6 +177,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - name: Download LLVMDEV Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: llvmdev-osx-64
+          path: llvmdev-pkg
+
       - name: Install Miniconda
         run: |
           bash buildscripts/incremental/install_miniconda.sh
@@ -176,8 +202,8 @@ jobs:
             wheel \
             -y
           conda activate build_env
-          # Install LLVM with all dependencies for macOS
-          conda install -y -c numba/label/ci llvmdev
+          # Install local llvmdev package
+          conda install -y ./llvmdev-pkg/*.tar.bz2
 
       - name: build_osx_64_py${{ matrix.python-version }}_npy1.11
         run: |
