specify workflow id and correct download syntax

--- a/.github/workflows/llvmlite_build.yml
+++ b/.github/workflows/llvmlite_build.yml
@@ -27,6 +27,8 @@ jobs:
           name: llvmdev-linux-x86_64
           path: llvmdev-pkg
           run-id: ${{ inputs.llvmdev_run_id }}
+          repository: swap357/llvmlite
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Install Miniconda
         run: |
