--- a/.github/workflows/llvmdev_build.yml
+++ b/.github/workflows/llvmdev_build.yml
@@ -37,6 +37,11 @@ jobs:
           retention-days: 7
           if-no-files-found: error 
 
+      - name: Get Workflow Run ID
+        run: |
+          echo "Current workflow run ID: ${{ github.run_id }}"
+          echo "Use this ID when triggering llvmlite workflow"
+
   win-64:
     name: Build LLVMDEV (win-64)
     runs-on: windows-2019
@@ -100,4 +105,9 @@ jobs:
           path: ${{ env.OUTPUT }}
           retention-days: 7
           if-no-files-found: error
+
+      - name: Get Workflow Run ID
+        run: |
+          echo "Current workflow run ID: ${{ github.run_id }}"
+          echo "Use this ID when triggering llvmlite workflow"
 
