--- a/.github/workflows/llvmdev_build.yml
+++ b/.github/workflows/llvmdev_build.yml
@@ -111,3 +111,44 @@ jobs:
           echo "Current workflow run ID: ${{ github.run_id }}"
           echo "Use this ID when triggering llvmlite workflow"
 
+  osx-64:
+    name: Build LLVMDEV (osx-64)
+    runs-on: macos-13
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Miniconda
+        run: |
+          wget https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh
+          bash miniconda.sh -b -p $HOME/miniconda
+          echo "$HOME/miniconda/bin" >> $GITHUB_PATH
+
+      - name: Setup Conda Environment
+        run: |
+          source $HOME/miniconda/bin/activate
+          conda create -n builder conda-build -y
+
+      - name: Build
+        run: |
+          source $HOME/miniconda/bin/activate
+          conda activate builder
+          export MACOSX_DEPLOYMENT_TARGET=10.9
+          export CONDA_BUILD_SYSROOT=/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk
+          
+          RECIPE_NAME=./conda-recipes/llvmdev
+          conda build $RECIPE_NAME
+          echo "OUTPUT=$(conda build --output $RECIPE_NAME)" >> $GITHUB_ENV
+
+      - name: Upload LLVMDEV artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: llvmdev-osx-64
+          path: ${{ env.OUTPUT }}
+          retention-days: 7
+          if-no-files-found: error 
+
+      - name: Get Workflow Run ID
+        run: |
+          echo "Current workflow run ID: ${{ github.run_id }}"
+          echo "Use this ID when triggering llvmlite workflow"
+
