--- a/.github/workflows/llvmdev_build.yml
+++ b/.github/workflows/llvmdev_build.yml
@@ -135,6 +135,9 @@ jobs:
         run: |
           source $HOME/miniconda/bin/activate
           conda create -n builder conda-build -y
+          conda activate builder
+          # Install specific compiler toolchain
+          conda install -y -c conda-forge clang=14.0.6 clangxx=14.0.6 llvm-tools=14.0.6
 
       - name: Build
         run: |
@@ -142,6 +145,10 @@ jobs:
           conda activate builder
           export MACOSX_DEPLOYMENT_TARGET=10.9
           export CONDA_BUILD_SYSROOT=$(xcrun --show-sdk-path)
+          export CC=clang
+          export CXX=clang++
+          export LDFLAGS="-L$CONDA_PREFIX/lib"
+          export CPPFLAGS="-I$CONDA_PREFIX/include"
           
           RECIPE_NAME=./conda-recipes/llvmdev
           conda build $RECIPE_NAME
