Update llvmdev build workflow to include Xcode 14.2 setup step. This change ensures the correct Xcode version is used during the build process, enhancing compatibility and streamlining the environment configuration.

--- a/.github/workflows/llvmdev_build.yml
+++ b/.github/workflows/llvmdev_build.yml
@@ -117,6 +117,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup Xcode
+        run: |
+          sudo xcode-select --switch /Applications/Xcode_14.2.app
+          xcrun --show-sdk-path
+
       - name: Install Miniconda
         run: |
           wget https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh
