update llvmdev conda recipe to use correct toolchain

--- a/conda-recipes/llvmdev/meta.yaml
+++ b/conda-recipes/llvmdev/meta.yaml
@@ -33,7 +33,7 @@ build:
 
 requirements:
   build:
-    - {{ compiler('cxx') }}
+    - {{ compiler('cxx') }} # [not osx]
     - cmake
     - ninja
     - python >=3
