--- a/conda-recipes/llvmdev_for_wheel/conda_build_config.yaml
+++ b/conda-recipes/llvmdev_for_wheel/conda_build_config.yaml
@@ -16,5 +16,14 @@ c_compiler:              # [win]
 cxx_compiler:            # [win]
   - vs2019               # [win]
 
-MACOSX_SDK_VERSION:    # [osx and x86_64]
-  - 10.12              # [osx and x86_64]
+MACOSX_DEPLOYMENT_TARGET:
+  - 10.10                       # [osx and x86_64]
+
+macos_machine:
+  - x86_64-apple-darwin13.4.0   # [osx and x86_64]
+
+macos_min_version:
+  - 10.10                       # [osx and x86_64]
+
+CONDA_BUILD_SYSROOT:
+  - /opt/MacOSX10.10.sdk        # [osx and x86_64]
